增加录波文件波形和HDR显示功能

--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -353,3 +353,13 @@ fieldset[disabled] .customBtn {
 #waveModal .modal-header{
 	border-bottom-width:0px;
 }
+
+.panel-zero > .panel-heading {
+    background-color: #ebf5e7;
+    border-color: #dfeed2;
+    color: #93a034;
+}
+
+#wave-hdr{
+	overflow:auto;
+}
