完成配置文件访问接口封装

--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -788,7 +788,18 @@ fieldset[disabled] .customBtn {
 	}
 }
 
-.di .onlyAi{
+.bi .onlyAi{
+	display:none;
+}
+.bo .onlyAi{
+	display:none;
+}
+
+.ai .onlyBi{
+	display:none;
+}
+
+.bo .onlyBi{
 	display:none;
 }
 
