增加对一个请求中转换多个对象的支持

--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -788,18 +788,18 @@ fieldset[disabled] .customBtn {
 	}
 }
 
-.bi .onlyAi{
+.BI .onlyAi{
 	display:none;
 }
-.bo .onlyAi{
-	display:none;
-}
-
-.ai .onlyBi{
+.BO .onlyAi{
 	display:none;
 }
 
-.bo .onlyBi{
+.AI .onlyBi{
+	display:none;
+}
+
+.BO .onlyBi{
 	display:none;
 }
 
