--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -114,7 +114,7 @@ footer p {
 	margin-right: 0.3em;
 }
 
-.desktop-header a {
+.desktop-header ul a {
     color: #555;
     display: inline-block;
     line-height: 48px;
@@ -125,6 +125,7 @@ footer p {
 .desktop-header ul{
 	list-style: outside none none;
 	margin:0px;
+	float:left;
 }
 
 .desktop-header li{
@@ -138,13 +139,13 @@ footer p {
 .desktop-header a:first-child {
     margin-left: 0;
 }
-.desktop-header a:hover {
+.desktop-header ul a:hover {
     color: #555;
     text-decoration: none;
     background-color: #e7e7e7;
 }
 
-.desktop-header .active > a{
+.desktop-header ul .active > a{
 	font-size: 16px;
 	color: #555;
 	background-color: #e7e7e7;
@@ -193,13 +194,20 @@ footer p {
 }
 
 .mobile-header a:hover {
-    text-decoration: none;
+    /* text-decoration: none; */
     background: transparent;
 }
 
 .site-wrapper{
 	background: white none repeat scroll 0 0;
 }
+
+.loginItem{
+	float:right;
+	line-height:52px;
+	margin:0px 2px;
+}
+
 
 /*侧边栏*/
 .mobile-menu {
