--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -299,14 +299,11 @@ footer p {
 
     width: 80%;
     height: 80%;
-    max-height: 300px;
+    max-height: 320px;
 	max-width: 460px;
-    /* left: 10%;
-    top: 30%; */
-    /* margin:auto auto; */
 }
 
-#tipMsg{
+.tipMsg{
 	color: #ffffff;
 	text-align: center;
 	display: block;
