--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -1,5 +1,5 @@
 body,p,input,label,button,a,li{
-	font-family: 'Microsoft YaHei,微软雅黑 ,宋体,Arial,Verdana,Sans-serif' !important;
+	font-family: "Microsoft YaHei","微软雅黑" ,"宋体",Arial,Verdana,Sans-serif !important;
     font-size: 14px;
     vertical-align: middle;
 }
@@ -497,14 +497,13 @@ fieldset[disabled] .customBtn {
 }
 
 .callout{
-	text-align: center;
+	
     font-size: 15px;
 }
 
 .callout .contained{
 	max-width: 340px;
-	min-height: 220px;
-	margin:40px auto 0;
+	margin:20px auto 0;
 }
 
 .callout .icon{
@@ -517,8 +516,11 @@ fieldset[disabled] .customBtn {
 }
 
 .callout .title {
+	color:#ffffff;
     font-weight: 800;
     margin-bottom: 8px;
+    text-align: center;
+    background-color: #003b64;
 }
 
 .callout .content {
@@ -526,7 +528,6 @@ fieldset[disabled] .customBtn {
     font-size: 15px;
     margin-bottom: 30px;
     line-height: 22px;
-    text-align: center;
     padding: 0 20px;
 }
 
